chore: fixed minor changes for render

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DB_PORT=5432
 DB_NAME=po
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
+DB_SSLMODE=disable
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
